Edited HPQ design